app/components/container.module.css
.container {
  margin-left: auto;
  margin-right: auto;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  width: 100%;
}

@media screen and (min-width: 960px) {
  .container {
    padding: none;
    width: 960px;
  }
}

